[tool.poetry]
name = "smola20"
version = "0.1.0"
description = ""
authors = ["mnogoruk <lionless072@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8.8"
Django = "^3.2"
pip = "^21.0.1"
install = "^1.3.4"
djangorestframework = "^3.12.4"
Markdown = "^3.3.4"
django-filter = "^2.4.0"
django-cors-headers = "^3.7.0"
django-extensions = "^3.1.2"
djangorestframework-simplejwt = "^4.6.0"
psycopg2 = "^2.8.6"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
